Added page stylesheet

--- a/example/glossary.html
+++ b/example/glossary.html
@@ -3,6 +3,7 @@
 <head>
   <title>In-line Glossary Plugin</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="page.css">
   <link rel="stylesheet" type="text/css" href="glossary.css">
   <script src="../glossary.min.js"></script>
   <script>
