Fixed a mistake in the script path

--- a/example/glossary.html
+++ b/example/glossary.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="page.css">
   <link rel="stylesheet" type="text/css" href="glossary.css">
-  <script src="../glossary.min.js"></script>
+  <script src="glossary.min.js"></script>
   <script>
   	window.onload = function() {
   		//initialize the glossary plugin
